--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit>=1.28.0
-Pillow>=10.0.0
-numpy>=1.24.0
-requests>=2.31.0
+streamlit==1.29.0
+pillow==10.1.0
+numpy==1.26.2
+requests==2.31.0
+groq==0.4.1
