--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit==1.29.0
-pillow==10.1.0
-numpy==1.26.2
-requests==2.31.0
-groq==0.4.1
+streamlit>=1.32.0
+pillow>=10.3.0
+requests>=2.31.0
+numpy>=1.26.0
